# scan-to-paperless

./: .bandit.yaml  .dockerignore  .editorconfig  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .prospector.yaml  .pylintrc  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  config.md  danielquinn-paperless-backup.syno.json  danielquinn-paperless-consumer.json  danielquinn-paperless-consumer.syno.json  danielquinn-paperless-webserver.json  danielquinn-paperless-webserver.syno.json  docker-compose.yaml  jsonschema-gentypes.yaml  mypy.ini  package-lock.json  package.json  post_db_create.sql  postgres.json  postprocess  process  process.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-install.txt  requirements.in  requirements.txt  run-jsonschema-gentypes  (+11 more)
.circleci/: config.yml
.github/: ci-upgrade.yaml  copilot-instructions.md  dependabot.yaml  dependabot.yml  dpkg-versions.yaml  publish.yaml  renovate.json5
.github/workflows/: audit.yaml  backport.yaml  changelog.yaml  clean.yaml  codeql.yaml  dependabot-auto-merge.yaml  dependency-auto-review.yaml  main.yaml  pr-check.yaml  pr-checks.yaml  pull-request-automation.yaml  rebuild.yaml  snyk-security.yaml
ci/: check-pull-request  config.yaml  dpkg-versions.yaml  requirements.txt  schema-copy
scan_to_paperless/: AGENTS.md  __init__.py  add_code.py  code.py  config-schema.json  config.py  config_old.py  config_schema.json  jupyter.py  jupyter_utils.py  process.py  process_schema.json  process_schema.py  process_utils.py  scan.py  scan_process_status.py  scan_sane.py  status.html  status.py
tests/: .pylintrc  Dockerfile  image-1.tiff  screenshot.js  test_code.py  test_process.py  test_scan.py  test_status.py  test_status_transitions.py  test_watch.py
tests/status/scan/10/: error.yaml
tests/status/scan/4/: config.yaml
tests/status/scan/5/: config.yaml
tests/status/scan/6/: config.yaml
tests/status/scan/7/: config.yaml
tests/status/scan/8/: config.yaml
tests/status/scan/9/: config.yaml
